Add detailed filter size and strength selectors

--- a/index.html
+++ b/index.html
@@ -1103,6 +1103,7 @@
         <label for="filter">Filter:</label>
         <select id="filter" name="filter" multiple size="10"></select>
       </div>
+      <div class="form-row" id="filterDetails"></div>
 
       <h3 id="monitoringHeading">Monitoring</h3>
       <div class="form-row">
