feat: add crew contacts to project form

--- a/index.html
+++ b/index.html
@@ -943,8 +943,17 @@
         <input type="text" id="projectName" name="projectName" />
       </div>
       <div class="form-row">
-        <label for="dop">DoP:</label>
-        <input type="text" id="dop" name="dop" />
+        <label for="productionCompany">Production Company:</label>
+        <input type="text" id="productionCompany" name="productionCompany" />
+      </div>
+      <div class="form-row">
+        <label for="rentalHouse">Rental House:</label>
+        <input type="text" id="rentalHouse" name="rentalHouse" />
+      </div>
+      <h3 id="crewHeading">Crew</h3>
+      <div class="form-row" id="crewListRow">
+        <div id="crewContainer"></div>
+        <button type="button" id="addPersonBtn">+</button>
       </div>
       <div class="form-row">
         <label for="prepStart" id="prepLabel">Prep Days:</label>
