--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
   <a href="#mainContent" class="skip-link" id="skipLink">Skip to content</a>
   <div id="offlineIndicator" role="status" aria-live="polite">Offline</div>
   <header id="topBar">
-    <h1 id="mainTitle">Cine List</h1>
+    <div class="branding">
+      <img src="icon.svg" alt="" id="logo" />
+      <h1 id="mainTitle">Cine List</h1>
+    </div>
     <nav class="controls" aria-label="Main controls">
       <select id="languageSelect" aria-label="Select language">
         <option value="en">English</option>
