--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
   <meta name="referrer" content="no-referrer" />
   <meta name="color-scheme" content="light dark" />
   <title>Cine List</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="overview-print.css" media="print" />
+  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="styles/overview-print.css" media="print" />
   <link rel="icon" href="icon.svg" type="image/svg+xml" />
   <link rel="icon" href="icon.png" type="image/png" />
   <link rel="apple-touch-icon" href="icon.png" />
@@ -780,7 +780,7 @@
           <ul>
             <li>Open with <em>Edit Device Data…</em> to add, modify or remove devices.</li>
             <li>Changes are stored locally; use <em>Export</em> and <em>Import</em> to share databases.</li>
-            <li><em>Revert</em> restores defaults from the files in <code>devices/</code>.</li>
+            <li><em>Revert</em> restores defaults from the files in <code>js/devices/</code>.</li>
           </ul>
         </section>
         <section data-help-section id="deviceCategoriesHelp">
@@ -928,7 +928,7 @@
           </details>
           <details class="faq-item">
             <summary>Where does the device data come from?</summary>
-            <p>The default database is defined in the files under <code>devices/</code> from manufacturer specifications. You can modify or replace them via the Device Database Editor.</p>
+            <p>The default database is defined in the files under <code>js/devices/</code> from manufacturer specifications. You can modify or replace them via the Device Database Editor.</p>
           </details>
         </section>
       </div>
@@ -1325,21 +1325,21 @@
     </datalist>
   </dialog>
   <dialog id="overviewDialog"></dialog>
-  <script src="globalthis-polyfill.js"></script>
-  <script src="devices/index.js"></script>
-  <script src="devices/cameras.js"></script>
-  <script src="devices/monitors.js"></script>
-  <script src="devices/video.js"></script>
-  <script src="devices/fiz.js"></script>
-  <script src="devices/batteries.js"></script>
-  <script src="devices/batteryHotswaps.js"></script>
-  <script src="devices/cages.js"></script>
-  <script src="devices/gearList.js"></script>
-  <script src="devices/wirelessReceivers.js"></script>
-  <script src="storage.js"></script>
-  <script src="translations.js"></script>
-  <script src="lz-string.min.js"></script>
-  <script src="script.js"></script>
-  <script src="overview.js"></script>
+  <script src="js/globalthis-polyfill.js"></script>
+  <script src="js/devices/index.js"></script>
+  <script src="js/devices/cameras.js"></script>
+  <script src="js/devices/monitors.js"></script>
+  <script src="js/devices/video.js"></script>
+  <script src="js/devices/fiz.js"></script>
+  <script src="js/devices/batteries.js"></script>
+  <script src="js/devices/batteryHotswaps.js"></script>
+  <script src="js/devices/cages.js"></script>
+  <script src="js/devices/gearList.js"></script>
+  <script src="js/devices/wirelessReceivers.js"></script>
+  <script src="js/storage.js"></script>
+  <script src="js/translations.js"></script>
+  <script src="js/lz-string.min.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/overview.js"></script>
 </body>
 </html>
