--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
   <meta name="referrer" content="no-referrer" />
   <meta name="color-scheme" content="light dark" />
   <title>Cine List</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="overview-print.css" media="print" />
+  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="styles/overview-print.css" media="print" />
   <link rel="icon" href="icon.svg" type="image/svg+xml" />
   <link rel="icon" href="icon.png" type="image/png" />
   <link rel="apple-touch-icon" href="icon.png" />
@@ -1328,7 +1328,6 @@
     </datalist>
   </dialog>
   <dialog id="overviewDialog"></dialog>
-  <script src="globalthis-polyfill.js"></script>
   <script src="devices/index.js"></script>
   <script src="devices/cameras.js"></script>
   <script src="devices/monitors.js"></script>
@@ -1339,10 +1338,10 @@
   <script src="devices/cages.js"></script>
   <script src="devices/gearList.js"></script>
   <script src="devices/wirelessReceivers.js"></script>
-  <script src="storage.js"></script>
+  <script src="js/storage.js"></script>
   <script src="translations.js"></script>
-  <script src="lz-string.min.js"></script>
-  <script src="script.js"></script>
-  <script src="overview.js"></script>
+  <script src="js/lz-string.min.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/overview.js"></script>
 </body>
 </html>
