feat: search dropdown selects devices

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h1 id="mainTitle">Cine List</h1>
     </div>
     <div class="feature-search">
-      <input type="search" id="featureSearch" list="featureList" placeholder="Search features..." aria-label="Search features and help" />
+      <input type="search" id="featureSearch" list="featureList" placeholder="Search features or devices..." aria-label="Search features, devices and help" />
       <datalist id="featureList"></datalist>
     </div>
     <nav class="controls" aria-label="Main controls">
