Add iOS standalone migration help dialog

--- a/index.html
+++ b/index.html
@@ -779,6 +779,35 @@
     </div>
   </div>
 
+  <div
+    id="iosPwaHelpDialog"
+    role="dialog"
+    aria-modal="true"
+    aria-labelledby="iosPwaHelpTitle"
+    aria-describedby="iosPwaHelpIntro"
+    hidden
+  >
+    <div class="ios-pwa-help-content">
+      <h2 id="iosPwaHelpTitle">Keep your data when installing on iOS</h2>
+      <p id="iosPwaHelpIntro">
+        Safari keeps the browser tab and the installed app separate. To move your Cine Power Planner data into the app:
+      </p>
+      <ol id="iosPwaHelpSteps">
+        <li id="iosPwaHelpStep1">Open Cine Power Planner in Safari where your projects are still visible.</li>
+        <li id="iosPwaHelpStep2">Go to Settings → Backup &amp; Restore → Backup to download a copy of your data.</li>
+        <li id="iosPwaHelpStep3">Open Cine Power Planner from your home screen.</li>
+        <li id="iosPwaHelpStep4">Go to Settings → Backup &amp; Restore → Restore and pick the backup file.</li>
+      </ol>
+      <p id="iosPwaHelpNote">
+        After restoring once, all changes stay inside the installed app. Keep the backup if you plan to reinstall or switch
+        devices.
+      </p>
+      <div class="button-row ios-pwa-help-actions">
+        <button id="iosPwaHelpClose">Got it</button>
+      </div>
+    </div>
+  </div>
+
   <div id="helpDialog" role="dialog" aria-modal="true" aria-labelledby="helpTitle" tabindex="-1" hidden>
     <div class="help-content">
       <button id="closeHelp">Close</button>
