Clarify saved project storage

--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
         <section
           data-help-section
           id="managingSetups"
-          data-help-keywords="save saved projects load manage share backup restore export import delete rename factory reset clear project"
+          data-help-keywords="save saved projects load manage share backup restore export import delete rename factory reset clear project cache local storage browser reopen"
         >
           <h3><span class="help-icon" aria-hidden="true">🗂️</span>Managing Projects</h3>
           <ul>
@@ -1016,6 +1016,10 @@
                 data-help-highlight="#setup-manager"
               ><strong>Save</strong></a>
               again to update the entry.
+            </li>
+            <li>
+              Saved projects live in your browser&rsquo;s cache so they stay available after closing or reopening tabs and browsers,
+              as long as the cache isn&rsquo;t cleared.
             </li>
             <li>
               <a
