--- a/index.html
+++ b/index.html
@@ -92,20 +92,26 @@
       </button>
       <button id="pinkModeToggle" title="Toggle pink mode" aria-label="Toggle pink mode" aria-pressed="false">
         <span class="icon-glyph icon-svg pink-mode-icon" aria-hidden="true">
-          <svg
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="1.6"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            aria-hidden="true"
-          >
-            <path d="M5.5 11.3 8.9 6.1a1 1 0 0 1 1.1-.3l2.8.9a1 1 0 0 1 .5.4l2.5 3.5v2.9l-1.6 2.5V20H9.4v-3.2L6.5 14l-.9-1Z" />
-            <path d="M11.9 6.8 15.2 4.1 15.5 5.8" />
-            <path d="M9 8.1 6.5 7.1" />
-            <path d="M12.4 13.3c.9.1 1.6.6 2 1.3" />
-            <circle cx="14.6" cy="10.6" r=".55" />
+          <svg viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <path
+              d="m1 40c0-8 3-17 3-17a4.84 4.84 0 0 0-1.829-3.064 1 1 0 0 1 .45-1.716 19.438 19.438 0 0 1 4.379-.22c.579-2.317-1.19-3.963-2.782-4.938a1 1 0 0 1 .393-1.85 14.128 14.128 0 0 1 6.389.788c0-.958-1.147-2.145-2.342-3.122a1 1 0 0 1 .708-1.773 40.655 40.655 0 0 1 6.634.895 3.723 3.723 0 0 0-1.049-2.264 1 1 0 0 1 .823-1.652c6.151.378 9.226 1.916 9.226 1.916l10-1s8.472-2.311 15.954.5a1 1 0 0 1-.084 1.9c-1.455.394-2.87 1.143-2.87 2.6 0 0 4.426.738 5.675 4.114a1 1 0 0 1-1.228 1.317c-1.64-.48-4.273-.88-6.447.569Z"
+              fill="#805333"
+            />
+            <path
+              d="m30.18 42.82c1.073 2.7 2.6 9.993 3.357 13.8a2 2 0 0 1-1.964 2.38h-28.573a2 2 0 0 1-2-2v-18c0-2.55 10.03-22.11 23.99-23.87Z"
+              fill="#a56a43"
+            />
+            <path
+              d="m55.67 48.46-6.34 2.97a6 6 0 0 1-7.98-2.88l-.25-.54-.76-1.6a4.956 4.956 0 0 0-4.68-2.87c-.22.01-.44.02-.66.02a16.019 16.019 0 0 1-8.28-29.66c-1.81-2.97-3.45-8.03 2.03-12.49a2.1 2.1 0 0 1 2.5 0c4.23 3.45 4.21 7.25 3.16 10.17a16 16 0 0 1 15.91 11.36l5.31 11.31 2.92 6.22a6.008 6.008 0 0 1-2.88 7.99Z"
+              fill="#cb8252"
+            />
+            <circle cx="42" cy="26" r="3" fill="#2c2f38" />
+            <circle cx="54" cy="43" r="1" fill="#805333" />
+            <path
+              d="m58.55 40.47-2.92-6.22-14.53 13.76.25.54a6 6 0 0 0 7.98 2.88l6.34-2.97a6.008 6.008 0 0 0 2.88-7.99Zm-4.55 3.53a1 1 0 1 1 1-1 1 1 0 0 1-1 1Z"
+              fill="#cf976a"
+            />
+            <circle cx="41" cy="25" r="1.25" fill="#ecf0f1" />
           </svg>
         </span>
       </button>
@@ -1758,30 +1764,39 @@
         <section
           data-help-section
           id="pinkModeHelp"
-          data-help-keywords="pink mode unicorn accent theme playful sparkle colour color toggle p key"
+          data-help-keywords="pink mode horse unicorn accent theme playful sparkle colour color toggle p key animation cycle rotating"
         >
           <h3>
-            <span class="help-icon icon-glyph icon-svg pink-mode-icon" aria-hidden="true">
-              <svg
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="1.6"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                aria-hidden="true"
-              >
-                <path d="M5.5 11.3 8.9 6.1a1 1 0 0 1 1.1-.3l2.8.9a1 1 0 0 1 .5.4l2.5 3.5v2.9l-1.6 2.5V20H9.4v-3.2L6.5 14l-.9-1Z" />
-                <path d="M11.9 6.8 15.2 4.1 15.5 5.8" />
-                <path d="M9 8.1 6.5 7.1" />
-                <path d="M12.4 13.3c.9.1 1.6.6 2 1.3" />
-                <circle cx="14.6" cy="10.6" r=".55" />
+            <span id="pinkModeHelpIcon" class="help-icon icon-glyph icon-svg pink-mode-icon" aria-hidden="true">
+              <svg viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                <path
+                  d="m1 40c0-8 3-17 3-17a4.84 4.84 0 0 0-1.829-3.064 1 1 0 0 1 .45-1.716 19.438 19.438 0 0 1 4.379-.22c.579-2.317-1.19-3.963-2.782-4.938a1 1 0 0 1 .393-1.85 14.128 14.128 0 0 1 6.389.788c0-.958-1.147-2.145-2.342-3.122a1 1 0 0 1 .708-1.773 40.655 40.655 0 0 1 6.634.895 3.723 3.723 0 0 0-1.049-2.264 1 1 0 0 1 .823-1.652c6.151.378 9.226 1.916 9.226 1.916l10-1s8.472-2.311 15.954.5a1 1 0 0 1-.084 1.9c-1.455.394-2.87 1.143-2.87 2.6 0 0 4.426.738 5.675 4.114a1 1 0 0 1-1.228 1.317c-1.64-.48-4.273-.88-6.447.569Z"
+                  fill="#805333"
+                />
+                <path
+                  d="m30.18 42.82c1.073 2.7 2.6 9.993 3.357 13.8a2 2 0 0 1-1.964 2.38h-28.573a2 2 0 0 1-2-2v-18c0-2.55 10.03-22.11 23.99-23.87Z"
+                  fill="#a56a43"
+                />
+                <path
+                  d="m55.67 48.46-6.34 2.97a6 6 0 0 1-7.98-2.88l-.25-.54-.76-1.6a4.956 4.956 0 0 0-4.68-2.87c-.22.01-.44.02-.66.02a16.019 16.019 0 0 1-8.28-29.66c-1.81-2.97-3.45-8.03 2.03-12.49a2.1 2.1 0 0 1 2.5 0c4.23 3.45 4.21 7.25 3.16 10.17a16 16 0 0 1 15.91 11.36l5.31 11.31 2.92 6.22a6.008 6.008 0 0 1-2.88 7.99Z"
+                  fill="#cb8252"
+                />
+                <circle cx="42" cy="26" r="3" fill="#2c2f38" />
+                <circle cx="54" cy="43" r="1" fill="#805333" />
+                <path
+                  d="m58.55 40.47-2.92-6.22-14.53 13.76.25.54a6 6 0 0 0 7.98 2.88l6.34-2.97a6.008 6.008 0 0 0 2.88-7.99Zm-4.55 3.53a1 1 0 1 1 1-1 1 1 0 0 1-1 1Z"
+                  fill="#cf976a"
+                />
+                <circle cx="41" cy="25" r="1.25" fill="#ecf0f1" />
               </svg>
             </span>
             Pink Mode
           </h3>
           <ul>
-            <li>Click the unicorn button (it sparkles when pink mode is active) for a playful pink accent theme.</li>
+            <li>
+              Click the unicorn button for a playful pink accent theme. When pink mode is on, the button cycles through unicorn
+              icons every 30 seconds with a gentle pop animation and becomes a horse again when you return to the default theme.
+            </li>
             <li>The setting persists between visits and works in light or dark mode.</li>
             <li>Press <kbd>P</kbd> to toggle pink mode.</li>
           </ul>
