--- a/index.html
+++ b/index.html
@@ -200,13 +200,6 @@
         <button id="shareSetupBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF219;</span>Share Project</button>
       </div>
     </div>
-    <div class="form-row form-row-actions share-options">
-      <span class="form-label-spacer" aria-hidden="true"></span>
-      <label id="shareIncludeAutoGearLabel" class="share-option">
-        <input type="checkbox" id="shareIncludeAutoGear" />
-        <span id="shareIncludeAutoGearText">Include automatic gear rules</span>
-      </label>
-    </div>
     <p id="shareLinkMessage" class="hidden" role="status" aria-live="polite"></p>
     <div class="form-row" id="sharedLinkRow">
       <label for="applySharedLinkBtn" id="sharedLinkLabel">Shared Project:</label>
@@ -2277,6 +2270,24 @@
       </div>
     </div>
   </div>
+  <dialog id="shareDialog" aria-labelledby="shareDialogHeading">
+    <form id="shareForm" method="dialog">
+      <h3 id="shareDialogHeading">Share Project</h3>
+      <p id="shareFilenameMessage">Enter a name for the shared project file (default: project).</p>
+      <div class="form-row">
+        <label for="shareFilename" id="shareFilenameLabel">Shared file name</label>
+        <input type="text" id="shareFilename" name="shareFilename" />
+      </div>
+      <label id="shareIncludeAutoGearLabel" class="share-option">
+        <input type="checkbox" id="shareIncludeAutoGear" />
+        <span id="shareIncludeAutoGearText">Include automatic gear rules</span>
+      </label>
+      <div class="dialog-actions">
+        <button type="button" id="shareCancelBtn">Cancel</button>
+        <button type="submit" id="shareConfirmBtn">Download</button>
+      </div>
+    </form>
+  </dialog>
 
   <dialog id="sharedImportDialog" aria-labelledby="sharedImportDialogHeading">
     <form id="sharedImportForm" method="dialog">
