--- a/index.html
+++ b/index.html
@@ -218,7 +218,49 @@
         tabindex="-1"
         class="visually-hidden"
       />
-      <button id="applySharedLinkBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF155;</span>Load</button>
+      <button id="applySharedLinkBtn">
+        <span class="btn-icon icon-glyph icon-svg load-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <path
+              d="M3.75 11.25V8.25H8.7L10.4 6.75H18.75V11.25"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <rect
+              x="3.75"
+              y="11.25"
+              width="16.5"
+              height="8.5"
+              rx="1.75"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M12 12.75v4.5"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="m9.75 14.75 2.25 2.25 2.25-2.25"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </span>
+        Load
+      </button>
     </div>
     <div class="form-row form-row-actions">
       <span class="form-label-spacer" aria-hidden="true"></span>
