Update camera icon rendering in setup diagram

--- a/index.html
+++ b/index.html
@@ -2611,7 +2611,7 @@
       </fieldset>
 
       <fieldset>
-        <legend><span class="legend-icon icon-glyph" aria-hidden="true" data-icon-font="film">&#xF12D;</span>Camera Project</legend>
+        <legend><span class="legend-icon icon-glyph" id="cameraProjectLegendIcon" aria-hidden="true"></span>Camera Project</legend>
         <div class="form-row"><label>Camera:<input type="text" id="fbCamera" name="fbCamera" readonly></label></div>
         <div class="form-row"><label>Battery Plate:<input type="text" id="fbBatteryPlate" name="fbBatteryPlate" readonly></label></div>
         <div class="form-row"><label>Lens Mount:<input list="mountOptions" id="fbLensMount" name="fbLensMount"></label></div>
