--- a/index.html
+++ b/index.html
@@ -211,7 +211,49 @@
         tabindex="-1"
         class="visually-hidden"
       />
-      <button id="applySharedLinkBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF155;</span>Load</button>
+      <button id="applySharedLinkBtn">
+        <span class="btn-icon icon-glyph icon-svg" aria-hidden="true">
+          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <path
+              d="M12 3v9.75"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <polyline
+              points="8.75 9.75 12 12.75 15.25 9.75"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M4.75 11.5H8.6L10.4 9h8.85L21 11.5"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <rect
+              x="4.75"
+              y="12.5"
+              width="14.5"
+              height="7.25"
+              rx="1.75"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </span>
+        Load
+      </button>
     </div>
     <div class="form-row form-row-actions">
       <span class="form-label-spacer" aria-hidden="true"></span>
